[tool.poetry]
name = "EDI-Tool"
version = "0.1.0"
description = ""
authors = ["maxomm <max.warsinke@googlemail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.5.0"
Pillow = "^9.0.0"
keras = "2.9.0"
tensorflow = "2.9.0"
opencv-python = "^4.6.0.66"
scipy = "^1.10.0"
auto-py-to-exe = "^2.31.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = "MYPACKAGENAME"
known_local_folder = "tests"

[tool.ruff]
line-length = 120